# 3d_rotation

./: .gitignore  CMakeLists.txt  README.md
cmake/: 3d_rotation_Doxyfile.in  3d_rotation_build_options.cmake  googletest-download.cmake
examples/: CMakeLists.txt  ExInitialization.cpp
include/3d_rotation/: 3d_rotation.hpp  Matrix.hpp  NumericalMaths.hpp  Quaternion.hpp  RotationAxisAngle.hpp  RotationBase.hpp  RotationQuaternion.hpp  Vector.hpp
src/: CMakeLists.txt
src/3d_rotation/: 3d_rotation.cpp
tests/: CMakeLists.txt  Test3d_rotation.cpp
